<resources>
    <string name="app_name">Z11App</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="input_email">Email</string>
    <string name="input_pass">Password</string>
    <string name="btn_login">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="txtv_forgot_pass">Forgot password</string>
    <string name="txtv_register">Register</string>
    <string name="btn_login_google">Google</string>
    <string name="btn_login_fb">Facebook</string>


    <string name="search">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pref_sound_effects_label">Sound effects</string>
    <string name="pref_sound_effects_key">sound</string>
    <string name="pref_enable_notification_key">enable_notification</string>
    <string name="pref_enable_notification_label">Enable notification</string>
    <string name="pref_enable_notification_default">true</string>
    <string name="pref_sound_effects_default">true</string>
    <string name="pref_make_payment_label">Make payment</string>
    <string name="pref_make_payment_key">payment</string>
    <string name="pref_make_payment_default">true</string>
    <string name="pref_make_payment_summary">Allow app display alert message when you purchase item</string>
    <string name="title_setting_activity">Settings</string>
    <string name="pref_native_language_label">I speak</string>
    <string name="pref_native_language_key">language</string>
    <string name="content_authority">vn.com.z11.z11app</string>
</resources>
